style(Nuevos estilos): :lipstick: Hemos mejorado la parte responsive
añadimos responsive para tablets y móviles dando una mejor visualización de esta página.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="apple-touch-icon" href="imágenes/OA-fotor-20240413112520.png" sizes="180x180">
     <title>OA2003</title>
 </head>
+<div class="center-all">
+ 
 <body class="preload">
     <nav>
         <ul class="container">
@@ -29,7 +31,7 @@
                     <header>
                         <h1> Hola, mi nombre es<strong> Óscar Albarracín</strong>.</h1>
                     </header>
-                    <p>Y esta es mi <strong>historia</strong>, tengo 20 años y actualmente he decido sumergirme en el mundo del desarrollo WEB. Todo empieza a una edad muy temprana donde le he tomado mucho cariño al mundo de la tecnología y la computación. Mi primer trabajo fue a la edad de los 15 años donde aprendí a reparar ordenadores de manera electrónica durante dos años seguidos; siendo esta mi primer experiencia en la informática y ahora que he crecido qusiera enfocarme en la programación y desarrallo WEB. Por el momento aprendo Frond-end y quisiera llegar lejos en este área por mi pasión hacía el diseño y como mis primeros pasos en el desarrollo.</p>
+                    <p><strong>Esta es mi historia:</strong> a mis 20 años, he tomado la decisión de sumergirme en el mundo del desarrollo web. Todo comenzó a una edad muy temprana, cuando me enamoré de la tecnología y la computación. Mi primer empleo fue a los 15 años, donde aprendí a reparar ordenadores electrónicamente durante dos años consecutivos. Esta experiencia marcó mis primeros pasos en el campo de la informática. Ahora que he crecido, quiero centrarme en la programación y el desarrollo web. Actualmente estoy aprendiendo Front-end y aspiro a llegar lejos en esta área debido a mi pasión por el diseño y mis primeras incursiones en el desarrollo.</p>
                     <a href="#work" class="button scrolly">Qué estoy aprendiendo.</a>
                 </div>
             </div>
@@ -38,11 +40,11 @@
  
     <!-- Skills -->
     <article id="work" class="wrapper style2">
-        <div class="container">
+        <div class="container" id="Skills">
             <header>
                 <h2>Aquí está todo lo que he aprendido.</h2>
             </header>
-            <div class="row aln-center">
+            <div class="row aln-center" id="lenguajes">
                 <div class="col-4 col-6-medium col-12-small">
                     <section class="box style1">
                         <span class="icon featured fa-comments"></span>
@@ -143,4 +145,5 @@
     </article>
    
 </body>
+</div>
 </html>
