docs: :memo: Hemos puesto a funcionar el form a través de una API
Gestionamos el funcionamiento para el form

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="contact-form">
-                        <form id="formulario-contacto" method="post" action="#">
+                        <form id="formulario-contacto" action="https://formsubmit.co/elxannax01@gmail.com" method="POST">
                             <div class="row contact-form__content">
                                 <div class="col-6 col-12-small div__form--flex">
                                     <input class="contact__imput--mark" type="text" name="name" id="name" placeholder="Nombres y Apellidos"/>
@@ -129,6 +129,8 @@
                                     </ul>
                                 </div>
                             </div>
+                            <input type="hidden" name="_next" value="elxannax01@gmail.com">
+                            <input type="hidden" name="_captcha" value="false">
                         </form>
                     </div>
                 </div>
