--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" href="imágenes/OA-fotor-20240413112520.png" type="image/png" sizes="180x180">
     <link rel="apple-touch-icon" href="imágenes/OA-fotor-20240413112520.png" sizes="180x180">
